# snek

./: .rustfmt.toml  Cargo.toml  README.md
.githooks/: pre-commit
.github/: CODEOWNERS
.github/workflows/: automerge.yml  build_and_test.yml  check_and_test.yml  shellcheck.yml  style.yml
src/: driver.rs  game.rs  input.rs  lib.rs  main.rs  snake.rs  terminal.rs
src/snek/: args.rs  driver.rs  foo.rs  food.rs  game.rs  mod.rs  snake.rs  terminal.rs  ui.rs
