[package]
name = "snek"
version = "0.1.0"
authors = ["sashaweiss <asashaweiss@gmail.com>", "nathanshelly <nsnshelly@gmail.com>"]
edition = "2018"

[dependencies]
tui = "0.8"
termion = "1.5"
rand = "0.7"
crossbeam-channel = "0.4"
clap = { git = "https://github.com/clap-rs/clap/" }

[lib]
name = "libsnek"
path = "src/lib.rs"

[[bin]]
name = "snek"
path = "src/bin/main.rs"